--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@react-navigation/stack": "^6.3.29",
     "expo": "~50.0.13",
     "expo-status-bar": "~1.11.1",
+    "firebase": "^10.11.0",
+    "lodash": "^4.17.21",
+    "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-native": "0.73.5",
+    "react-native-gesture-handler": "~2.14.0",
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "^4.9.0",
-    "react-native-screens": "^3.29.0",
-    "react-native-gesture-handler": "~2.14.0"
+    "react-native-screens": "^3.29.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
