--- a/package.json
+++ b/package.json
@@ -11,17 +11,17 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
-    "expo": "~50.0.13",
-    "expo-status-bar": "~1.11.1",
+    "expo": "~51.0.4",
+    "expo-status-bar": "~1.12.1",
     "firebase": "^10.11.0",
     "lodash": "^4.17.21",
     "native-base": "^3.4.28",
     "react": "18.2.0",
-    "react-native": "0.73.5",
-    "react-native-gesture-handler": "~2.14.0",
+    "react-native": "0.74.1",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-paper": "^5.12.3",
-    "react-native-safe-area-context": "^4.9.0",
-    "react-native-screens": "^3.29.0"
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
